--- a/readme.Rmd
+++ b/readme.Rmd
@@ -10,6 +10,8 @@ output:
 -------------------------------
 <!-- badges: start -->
   [![R-CMD-check](https://github.com/EarthSystemDiagnostics/hamstr/workflows/R-CMD-check/badge.svg)](https://github.com/EarthSystemDiagnostics/hamstr/actions)
+  [![codecov](https://codecov.io/gh/EarthSystemDiagnostics/hamstr/branch/master/graph/badge.svg?token=gFBWomcqwc)](https://codecov.io/gh/EarthSystemDiagnostics/hamstr)
+  [![test-coverage](https://github.com/EarthSystemDiagnostics/hamstr/actions/workflows/test-coverage.yaml/badge.svg)](https://github.com/EarthSystemDiagnostics/hamstr/actions/workflows/test-coverage.yaml)
 <!-- badges: end -->
 
 ```{r, include = FALSE}
