--- a/readme.Rmd
+++ b/readme.Rmd
@@ -20,9 +20,9 @@ knitr::opts_chunk$set(
   comment = "#>",
   cache = TRUE, autodep = TRUE,
   fig.width = 9,
-  dev = "png",
-  dev.args = list(type = "cairo-png"),
-  dpi = 300
+  dev = "svg",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
 )
 ```
 
